[gd_scene load_steps=7 format=3 uid="uid://dx3i7qn671mp4"]

[ext_resource type="Script" path="res://scripts/reward_enemy.gd" id="1_vapl8"]
[ext_resource type="AudioStream" uid="uid://c1mg57wpvtb1r" path="res://assets/audio/RewardAudio/take_hit.mp3" id="2_w3cy2"]

[sub_resource type="SphereShape3D" id="SphereShape3D_npqym"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_icwtk"]
albedo_color = Color(1, 0.278431, 0.0901961, 1)
emission_enabled = true
emission = Color(0.8, 0.0627451, 0.101961, 1)
emission_energy_multiplier = 3.41

[sub_resource type="SphereMesh" id="SphereMesh_qi0oy"]
material = SubResource("StandardMaterial3D_icwtk")

[sub_resource type="CylinderShape3D" id="CylinderShape3D_jykf0"]
height = 0.5
radius = 1.0

[node name="RewardEnemy" type="CharacterBody3D" groups=["enemy"]]
collision_layer = 1024
collision_mask = 17
script = ExtResource("1_vapl8")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_npqym")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("SphereMesh_qi0oy")

[node name="RewardNav" type="NavigationAgent3D" parent="."]
unique_name_in_owner = true
path_desired_distance = 0.25
target_desired_distance = 0.5

[node name="EnemyArea" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.127883, 0)
collision_layer = 1025
collision_mask = 17

[node name="CollisionShape3D" type="CollisionShape3D" parent="EnemyArea"]
shape = SubResource("CylinderShape3D_jykf0")

[node name="PlayerHit" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_w3cy2")

[connection signal="area_entered" from="EnemyArea" to="." method="_on_enemy_area_area_entered"]
[connection signal="body_entered" from="EnemyArea" to="." method="_on_enemy_area_body_entered"]
